# contract-archive-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: release.md
.github/workflows/: release.yml
contract_archive/: __init__.py  cli.py  cli_common.py  cli_config.py  cli_introspect.py  cli_party.py  cli_query.py  cli_render.py  config.py  errors.py
contract_archive/archive/: __init__.py  ingest.py  party_registry.py  paths.py  repository.py
contract_archive/archive/migrations/: 001_init.sql  003_document_types.sql  004_seals_subjects.sql  005_completeness.sql
contract_archive/extraction/: __init__.py  agent_fallback.py  amount_check.py  contract_extractor.py  doc_type_handlers.py  document_extractor.py  evidence_page_fix.py  fusion.py  hybrid.py  insurance_extractor.py  llm_extractor.py  normalize.py  property_fee.py  rule_extractor.py  text_fields.py  vision_seal.py  vl_extract.py
contract_archive/pipelines/: __init__.py  mineru_pipeline.py  vl_ocr.py
contract_archive/schemas/: __init__.py  document.py
contract_archive/utils/: __init__.py  concurrency.py  device.py  http_env.py  page_router.py  pdf.py
docker/: Dockerfile  Dockerfile.gpu
docs/: agent-ready-review.md  多源融合提取改进-需求prompt.md
evals/: README.md  RESEARCH.md  __init__.py  demo.py  make_gold.py  report.py  review.py  run.py  sample_report.md  sample_seal_report.md  score.py  seal.py
evals/cases/extraction/c01_carpark_with_subagreement/: gold.json  input.txt  meta.json
evals/cases/extraction/c02_income_certificate/: gold.json  input.txt  meta.json
evals/cases/extraction/c03_vat_invoice/: gold.json  input.txt  meta.json
evals/cases/extraction/c04_lease_complete/: gold.json  input.txt  meta.json
evals/cases/extraction/c05_real_estate_presale_full/: gold.json  input.txt  meta.json
evals/cases/extraction/c06_income_cert_scrubbed/: gold.json  input.txt  meta.json
evals/cases/extraction/c07_income_cert_dual_employer/: gold.json  input.txt  meta.json
evals/cases/extraction/c08_presale_subscription/: gold.json  input.txt  meta.json
evals/cases/extraction/c09_carpark_unsigned/: gold.json  input.txt  meta.json
evals/cases/extraction/c10_carpark_amount_typo/: gold.json  input.txt  meta.json
evals/cases/seal/s01_both_signed/: meta.json
evals/cases/seal/s02_party_b_blank/: gold.json
scripts/: multi_compare.py  release.sh  setup.sh
src/: cli.py  compare.py
src/api/: app.py
src/archive/: __init__.py  db.py  repository.py
src/archive/migrations/: 002_obligations.sql
src/extraction/: hybrid.py  llm_extractor.py  rule_extractor.py
src/pipelines/: __init__.py  base.py  dashscope_pipeline.py  mineru_pipeline.py  paddleocr_pipeline.py
src/schemas/: __init__.py  document.py
src/utils/: __init__.py  pdf.py
tests/: test_amount_check.py  test_archive_smoke.py  test_cli_render.py  test_clig_improvements.py  test_concurrency.py  test_config.py  test_doc_type_handlers.py  test_document_extractor.py  test_errors.py  test_evals_run.py  test_evals_score.py  test_evidence_page_fix.py  test_fusion.py  test_fusion_schema.py  test_ingest_options.py  test_ingest_vision_fusion.py  test_introspect.py  test_make_gold.py  test_mineru_pipeline_fallback.py  test_page_router.py  test_party_registry.py  test_pdf_text_layer.py  test_property_fee.py  test_review_fixes.py  test_signatory_mismatch.py  test_sub_agreements.py  test_vision_fusion_integration.py  test_vision_seal.py  test_vl_extract.py  test_vl_ocr.py
