[project]
name = "ocr-cli"
version = "0.1.0"
description = "Document Intelligence Playground: PDF → OCR → Structured Output (DashScope / PaddleOCR / MinerU comparison)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "ocr-cli" }]

# ===== 基础依赖：所有 pipeline 都需要的部分 =====
# 注意：paddlepaddle / paddleocr / mineru 体积大且会冲突，放进 optional-dependencies
# 用 `uv sync --extra dashscope` / `--extra paddleocr` / `--extra mineru` / `--extra all` 选装
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# DashScope (阿里百炼) 那一路 —— 纯 API，最轻量
dashscope = [
    "dashscope>=1.22.2",
]

# PaddleOCR + PP-StructureV3 那一路
# - macOS arm64 / Linux x86 CPU 默认走 paddlepaddle (cpu wheel)
# - 切到 RTX 5080 时在 .env 设 PADDLE_GPU=1，并改用 paddlepaddle-gpu (cu128 社区 wheel)
paddleocr = [
    "paddlepaddle>=3.0,<4.0",
    "paddleocr[all]>=3.0",
]

# MinerU 3.x
# 包含 CPU 兜底 backend (-b pipeline)；GPU 时用 -b vlm-transformers 自动启用 torch+cuda
mineru = [
    "mineru[core]>=3.1,<4.0",
]

# 一键全装（开发联调用）
all = [
    "dashscope>=1.22.2",
    "paddlepaddle>=3.0,<4.0",
    "paddleocr[all]>=3.0",
    "mineru[core]>=3.1,<4.0",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipython>=8.0",
]

[project.scripts]
ocr-cli = "src.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ===== uv 配置 =====
[tool.uv]
# 多索引时允许从任一索引选最佳版本（避免 paddle 私源覆盖 fastapi 等）
index-strategy = "unsafe-best-match"

# 主索引：阿里云（实测比清华快 6-8 倍：148KB/s vs 19KB/s）
# 境外用户：把下面这个 default index 删掉即可走 PyPI 官方
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

# 备用镜像 (腾讯)
[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

# paddlepaddle 私源（仅显式指定的包从这里取）
[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddle" }

[tool.ruff]
line-length = 100
target-version = "py310"
