[project]
name = "ocr-cli"
version = "0.1.0"
description = "本地合同档案库 CLI：MinerU 解析 + qwen3.7-max 字段抽取 + SQLite 索引"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "ocr-cli" }]

# ===== 基础依赖 =====
# dashscope 是合同字段抽取（qwen3.7-max LLM）的强依赖，纯 HTTP SDK ~200KB，放进 base
# mineru 体积大（含模型），仍走 optional-dependencies，按需 `uv sync --extra mineru`
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "dashscope>=1.22.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# MinerU 3.x —— 体积大（>1GB 模型），按需 `uv sync --extra mineru` 安装
mineru = [
    "mineru[core]>=3.1,<4.0",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipython>=8.0",
]

[project.scripts]
ocr-cli = "src.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ===== uv 配置 =====
[tool.uv]
# 主索引：阿里云（实测 148KB/s，比清华源 19KB/s 快 6-8 倍）
# 境外用户：把下面这个 default index 删掉即可走 PyPI 官方
# 注意：不挂 fallback 镜像——腾讯源实测会偶发 567，引入随机失败
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
line-length = 100
target-version = "py310"
