[project]
name = "contract-archive-cli"
version = "0.1.0"
description = "本地合同档案库 CLI：MinerU 解析 + qwen3.7-max 字段抽取 + SQLite 索引"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "crhan" }]

# ===== 基础依赖 =====
# dashscope 是合同字段抽取（qwen3.7-max LLM）的强依赖，纯 HTTP SDK ~200KB，放进 base
# mineru 体积大（含模型），仍走 optional-dependencies，按需 `uv sync --extra mineru`
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "tenacity>=8.2",
    # typer 上限锁 <0.26：0.26 起把 click 从自身依赖里移除（typer-slim 化），且 CLI 内省
    # API 未在本项目验证过。cli_introspect 用 typer.main.get_command 转 click 对象做命令
    # schema 内省，依赖 typer+click 的稳定行为，升级需重验。
    "typer>=0.12,<0.26",
    # click 是 cli_introspect 的**直接** import（把 typer app 转 click.Group 挖参数 schema）。
    # 必须显式声明——历史上靠 typer 传递依赖白嫖，typer 0.26 删 click 后即 ModuleNotFoundError。
    "click>=8.0,<9",
    "rich>=13.7",
    "dashscope>=1.22.2",
    "openai>=1.40",            # 多模态签章核查走 DashScope 的 OpenAI 兼容接口
]

[project.optional-dependencies]
# MinerU 3.x —— 体积大（>1GB 模型），按需 `uv sync --extra mineru` 安装
mineru = [
    "mineru[core]>=3.1,<4.0",
    # mineru 自身漏声明：pipeline backend 的 unet 表格识别 import scipy.spatial.distance
    # （mineru/model/table/rec/unet_table/utils_table_line_rec.py），缺则 mineru 子进程直接退出
    "scipy>=1.10",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipython>=8.0",
]

[project.scripts]
# 入口指向 main_entry（在 app() 外包顶层异常钩子），而非裸 app——见 cli.main_entry。
contract-archive = "contract_archive.cli:main_entry"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contract_archive"]

# ===== uv 配置 =====
[tool.uv]
# 主索引：阿里云（实测 148KB/s，比清华源 19KB/s 快 6-8 倍）
# 境外用户：把下面这个 default index 删掉即可走 PyPI 官方
# 注意：不挂 fallback 镜像——腾讯源实测会偶发 567，引入随机失败
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
line-length = 100
target-version = "py310"
